HangMan and chopping his body parts based on user command

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 // Define the main class for the application
-mainClassName = 'command_game.App'
+mainClassName = 'hangman.App'
 
 run{
     standardInput = System.in
